# dirty-spark-demo

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.specify/memory/: constitution.md
config/: stream_config.yaml  test.env  validation-rules-example.yaml  validation_rules.yaml
docker/: Dockerfile.spark  docker-compose.yml  init-db.sql
docs/: CODE_REVIEW_FINDINGS.md  FIXES_IMPLEMENTED.md  FIX_IMPLEMENTATION_PLAN.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_RECOMMENDATIONS.md  TEST_RESULTS_SUMMARY.md
specs/001-dirty-data-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dirty-data-validation/checklists/: requirements.md
specs/001-dirty-data-validation/contracts/: schemas.json  validation-api.yaml
src/batch/: __init__.py  pipeline.py  reprocess.py
src/batch/readers/: __init__.py  csv_reader.py  file_reader.py
src/batch/writers/: __init__.py  quarantine_writer.py  warehouse_writer.py
src/cli/: __init__.py  admin_cli.py  batch_cli.py  stream_cli.py
src/core/models/: __init__.py  audit_log.py  data_record.py  data_source.py  quarantine_record.py  schema_version.py  validation_result.py  validation_rule.py  warehouse_data.py
src/core/rules/: __init__.py  rule_config.py  rule_engine.py
src/core/schema/: __init__.py  evolution.py  inference.py  registry.py
src/core/validators/: __init__.py  base_validator.py  custom_validator.py  range_validator.py  regex_validator.py  required_field_validator.py  type_validator.py
src/observability/: lineage.py  logger.py  metrics.py
src/streaming/: pipeline.py  validation.py
src/streaming/sinks/: quarantine_sink.py  warehouse_sink.py
src/streaming/sources/: file_stream_source.py  kafka_source.py
src/utils/: __init__.py  validation.py
src/warehouse/: audit.py  connection.py  schema_mgmt.py  upsert.py
tests/: conftest.py
tests/e2e/: test_dirty_csv_batch.py  test_reprocessing.py  test_streaming_flow.py
tests/fixtures/: dirty_data.csv  malformed_events.json  schema_evolution_data.csv
tests/integration/: test_audit_trail.py  test_batch_pipeline.py  test_quarantine.py  test_stream_pipeline.py
tests/unit/: test_connection_pool.py  test_improvements.py  test_lineage.py  test_lineage_queries.py  test_models.py  test_rule_engine.py  test_schema_evolution.py  test_schema_inference.py  test_type_coercion.py  test_validators.py  test_warehouse.py
